add/remove favorite item

--- a/src/components/features/List/List.module.scss
+++ b/src/components/features/List/List.module.scss
@@ -32,3 +32,9 @@
    margin-top: 5%;
    font-family: 'Playfair Display', serif;
 }
+
+.loadingContainer {
+   position: absolute;
+   background-color: red;
+
+}
