--- a/src/components/features/List/List.module.scss
+++ b/src/components/features/List/List.module.scss
@@ -7,7 +7,7 @@
 
 .listGrid {
    display: grid;
-   grid-template-columns: repeat(4, 1fr);
+   grid-template-columns: repeat( 4, 1fr );
    gap: 2.5rem;
    margin: 25px 0 0 25px;
 }
@@ -36,5 +36,18 @@
 .loadingContainer {
    position: absolute;
    background-color: red;
+}
 
+
+@media ( max-width: 1200px ) {
+   .listGrid {
+      grid-template-columns: repeat( 3, 1fr );
+   }
+}
+
+@media ( max-width: 768px ) {
+   .listGrid {
+      grid-template-columns: repeat( 2, 1fr );
+      gap: 2.5rem;
+   }
 }
