--- a/src/Pages/LogIn/LogIn.module.scss
+++ b/src/Pages/LogIn/LogIn.module.scss
@@ -6,4 +6,17 @@
 .container {
    display: flex;
    flex-direction: row;
+   width: 100%;
+}
+
+@media (max-width: 768px) {
+
+   .main {
+      padding: 50px 0;
+   }
+
+   .container {
+      flex-direction: column;
+      align-items: center;
+   }
 }
