--- a/src/Pages/SignUp/SignUp.module.scss
+++ b/src/Pages/SignUp/SignUp.module.scss
@@ -7,3 +7,14 @@
    display: flex;
    flex-direction: row;
 }
+
+@media (max-width: 768px) {
+   .main {
+      padding: 50px 0;
+   }
+
+   .container {
+      flex-direction: column;
+      align-items: center;
+   }
+}
