--- a/src/components/features/FormAside/FormAside.module.scss
+++ b/src/components/features/FormAside/FormAside.module.scss
@@ -1,9 +1,12 @@
 .formAside {
    display: inline-flex;
    width: 50%;
+   max-width: 600px;
+   min-width: 450px;
    overflow: visible;
    justify-content: center;
    align-items: center;
+   margin-bottom: 50px;
 }
 
 .formRow {
@@ -107,4 +110,10 @@
    color: #bbb;      
    opacity: 0.7;
    cursor: not-allowed;
+}
+
+@media (max-width: 768px) {
+   .formAside {
+      width: 100%;
+   }
 }
