--- a/src/components/commons/ListMenuToggle/ListMenuToggle.module.scss
+++ b/src/components/commons/ListMenuToggle/ListMenuToggle.module.scss
@@ -8,9 +8,10 @@
    background-color: white;
    transition: all 0.3s;
    border: 2px solid #48bfee;
-   font-size: 15px;
+   font-size: 16px;
    transition: all 0.5s;
    cursor: pointer;
+   text-wrap: nowrap;
 
    &:hover {
       background-color: #ccc;
@@ -37,4 +38,17 @@
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    border-left-width: 1px;
+}
+
+
+@media ( max-width: 992px ) {
+   .toggleBtn {
+      font-size: 14px;
+   }
+}
+
+@media ( max-width: 768px ) {
+   .toggleBtn {
+      font-size: 12px;
+   }
 }
