--- a/src/components/commons/MenuRowList/MenuRowList.module.scss
+++ b/src/components/commons/MenuRowList/MenuRowList.module.scss
@@ -43,3 +43,25 @@
    }
 
 }
+
+@media ( max-width: 768px ) {
+   .title {
+      font-size: 16px;
+      line-height: 16px;
+   }
+   .logo {  
+      min-height: 25px;
+      min-width: 25px;
+   }
+}
+
+@media ( max-width: 992px ) {
+   .title {
+      font-size: 18px;
+      line-height: 18px;
+   }
+   .logo {  
+      min-height: 28px;
+      min-width: 28px;
+   }
+}
