--- a/src/components/commons/NavButton/NavButton.module.scss
+++ b/src/components/commons/NavButton/NavButton.module.scss
@@ -18,3 +18,20 @@
       transform: scale( 0.95 );
    }
 }
+
+
+@media ( max-width: 992px ) {
+   .navLink,
+   .navButton {
+      padding: 3px 15px;
+      font-size: 18px;
+   }
+}
+
+@media ( max-width: 768px ) {
+   .navLink,
+   .navButton {
+      padding: 3px 15px;
+      font-size: 16px;
+   }
+}
