--- a/src/components/features/List/List.module.scss
+++ b/src/components/features/List/List.module.scss
@@ -51,3 +51,13 @@
       gap: 2.5rem;
    }
 }
+
+@media ( max-width: 576px ) {
+   .listGrid {
+      grid-template-columns: repeat( 1, 1fr );
+   }
+
+   // .listMenu {
+   //    flex-direction: column;
+   // }
+}
