--- a/src/components/features/MenuAside/MenuAside.module.scss
+++ b/src/components/features/MenuAside/MenuAside.module.scss
@@ -11,8 +11,8 @@
    overflow: hidden;
    width: 75px;
 
-   &:hover {
-      width: 350px;
+   &IsHovered {
+      width: 350px !important;
       overflow-y: auto;
    }
 
